[waybar] fixed tray icons menu too big

--- a/config/hyprland/waybar/schemes/base16.css
+++ b/config/hyprland/waybar/schemes/base16.css
@@ -149,8 +149,8 @@ window#waybar.PCSX2 #window {
 	background: @color5;
 }
 
-#tray {
-	all: initial;
+#tray * {
+	padding: unset;
 }
 
 #tray > .needs-attention {
